chore: remove unneeded wildcard type usages (#776)
### Motivation
The usage of wildcard types in the changed places is not needed and can lead to exceptions, for example when used in combination with our rpc system.

### Modification
Remove uneeded wildcard types when they are exposed by our api.

### Result
No more usages of wildcard types.

##### Other context
Closes #775